--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,43 +2,52 @@
   url: https://www.upstatement.com/
   time: May 2018 - Present
   position: Engineer
+  position2: Engineer
 
 - company: Scout
   url: https://web.northeastern.edu/scout/
   time: Jan - June 2018
   position: Studio Developer
+  position2: Engineer
 
 - company: Apple Music
   url: https://www.apple.com/music/
   time: July - Dec 2017
   position: UI Engineer Co-op
+  position2: Engineer
 
 - company: Scout
   url: https://web.northeastern.edu/scout/
   time: Jan - June 2017
   position: Studio Developer
+  position2: Engineer
 
 - company: Starry
   url: https://starry.com/
   time: July - Dec 2016
   position: Software Engineer Co-op
+  position2: Engineer
 
 - company: Northeastern University
   url: http://www.ccis.northeastern.edu/
   time: Jan - May 2016
   position: HCI Teaching Assistant
+  position2: Engineer
 
 - company: NU Women in Tech
   url: http://nuwit.ccs.neu.edu/
   time: Jan 2016 - May 2017
   position: President & Web Chair
+  position2: Engineer
 
 - company: MullenLowe U.S.
   url: https://us.mullenlowe.com/
   time: July - Dec 2015
   position: Creative Technologist Co-op
+  position2: Engineer
 
 - company: Northeastern University
   url: http://www.ccis.northeastern.edu/
   time: Mar - May 2015
   position: HCI Research Assistant
+  position2: Engineer
