--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: Design-minded front-end software engineer focused on building beaut
 url: https://malath-anaya.github.io/
 baseurl: ''
 email: brittany.chiang@gmail.com
-cover: https://bchiang7.github.io/img/og.png
-logo: https://bchiang7.github.io/img/emojis/technologist.png
-resume: https://bchiang7.github.io/resume.pdf
+cover: https://malath-anaya.github.io/img/og.png
+logo: https://malath-anaya.github.io/img/emojis/technologist.png
+resume: https://malath-anaya.github.io/resume.pdf
 social:
   - title: email
     url: mailto:brittany.chiang@gmail.com
