--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -14,10 +14,10 @@
   used:
     - thing: Scriptwriting
     - thing: Open Screenplay
-    - thing: Horror/Thriller
+    - thing: Horror-Thriller
     - thing: Short Film
     - thing: Filmmaking
-
+    
 - name: Handicapped Short Story
   url: docs/others/handicapped.pdf
   description: "Handicapped" is an Arabic short story that takes a deeper look into the inner world, thoughts and emotions of a handicapped boy.
