--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -27,7 +27,7 @@
     - thing: Inspiration
 
 - name: The Marvel Pilot Program
-  url: docs/others/marvel.pdf
+  url: docs/others/marvel.png
   description: Successfully completed "The Marvel Pilot", a comprehensive program providing a holistic approach to STEM learning.
   used:
     - thing: STEM
